remove when blobfile change

--- a/src/templates/default/pc/tenant/template_add.html
+++ b/src/templates/default/pc/tenant/template_add.html
@@ -229,6 +229,7 @@
 			filename = fileInfo;
 			var formExcel = new FormData();
 			formExcel.append("file", file);
+			formExcel.append("oldBlobStore", fileBlobKey);
 
 			await getBlobLink().then(res=>{
 				fetch(res.url, {
