--- a/src/templates/default/pc/tenant/template_edit.html
+++ b/src/templates/default/pc/tenant/template_edit.html
@@ -317,6 +317,7 @@
 
 			var formExcel = new FormData();
 			formExcel.append("file", file);
+			formExcel.append("oldBlobStore", fileBlobKey);
 
 			await getBlobLink().then(res=>{
 				fetch(res.url, {
