--- a/src/templates/default/pc/tenant/template_add.html
+++ b/src/templates/default/pc/tenant/template_add.html
@@ -8,7 +8,7 @@
 	<script type="text/javascript" src="{{vscripturl|safe}}ucfext_task.js?{{version|safe}}"></script>
 	<script type="text/javascript" src="{{vscripturl|safe}}ucfext_operationlog.js?{{version|safe}}"></script>
 	<!-- <title>{{lang.VMSG_SITE_TITLE_OPERATIONLOG|safe}} - {% if sp_code == 'worksmobile': %}{{lang.HTML_TITLE_WORKSMOBILE}}{%else:%}{{lang.HTML_TITLE}}{%endif%}</title> -->
-	<title>{{lang.VMSG_SITE_TITLE_OPERATIONLOG|safe}} - {{lang.FILEUP_HTML_TITLE|safe}}</title>
+	<title>Add Template</title>
 	<script type="text/javascript">
 		var each_page_cnt = 20;
 		var store;
