--- a/src/templates/default/pc/tenant/template_add.html
+++ b/src/templates/default/pc/tenant/template_add.html
@@ -57,6 +57,9 @@
 				$("#table_question"+currentSheet).removeClass("d-none")
 				$("#label_question"+currentSheet).removeClass("d-none")
 			});
+
+			var FIELD_sk_display_name = Ext.ucf.field.createTextField2('FILED_display_name', 'FILED_display_name', '', '{{lang.FULLTEXT_SEARCH|safe|escapejs}}', 200, null);
+			FIELD_sk_display_name.render('display_name');
 		}
 		
 
@@ -72,6 +75,10 @@
 				var file = document.getElementById('file_template').files[0];
 				if(fileBlobKey === null){
 					Ext.Msg.alert("Notice", "テンプレートファイルアップロード");
+					return;
+				}
+				if(Ext.ucf.getElementValue('FILED_display_name').trim() == ""){
+					Ext.Msg.alert("Notice", "Display name is required");
 					return;
 				}
 				var reduceData = [];
@@ -119,7 +126,7 @@
 				frmData.append("file", fileBlobKey);
 				frmData.append("filename", filename);
 				frmData.append("sheetName", JSON.stringify(gSheets))
-				console.log(gSheets)
+				frmData.append("display_name", Ext.ucf.getElementValue('FILED_display_name'))
 				loading.show();
 				fetch('{{vurl|safe}}submit_template', {
 					method: "post",
@@ -310,8 +317,9 @@
 											</div>
 											
 											<!-- <div id="select_sheet"></div> -->
-											<label for=""></label>
 											<div id="select_sheet" style="margin-left: 8px; margin-bottom: 5px;"></div>
+											<p class="text-left">Display Name:</p>
+											<div id="display_name" style="margin-left: 8px; margin-bottom: 5px;text-align: left;"></div>
 										</div>
 										<div style="width: 60%;" id="iframe">
 											
