--- a/src/templates/default/pc/tenant/template_add.html
+++ b/src/templates/default/pc/tenant/template_add.html
@@ -276,7 +276,7 @@
 		{% include "./include/header.html" %}
 		<!-- mainArea//start -->
 		<div id="mainArea" class="{{leftmenu_class}}">
-			{% include "./include/index_leftmenu.html" %}
+			{% include "./include/index_leftmenu_template.html" %}
 			<!-- rightArea//start -->
 			<div id="rightArea">
 				{% include "./include/attention.html" %}
