--- a/src/templates/default/pc/tenant/template_add.html
+++ b/src/templates/default/pc/tenant/template_add.html
@@ -140,7 +140,7 @@
 					if(res.status){
 						Ext.Msg.alert("Notice", "Sucessfully", function(btn, text){
 							if (btn == 'ok'){
-								window.location.href = '{{vurl|safe}}#SETUPTEMPLATE'
+								window.location.href = '{{vurl|safe}}template'
 							}
 						});
 					}else{
