--- a/src/templates/default/pc/tenant/template_index.html
+++ b/src/templates/default/pc/tenant/template_index.html
@@ -202,7 +202,7 @@
 						text: 'Add Template',
 						handler: function(){
 							(new Ext.LoadMask(Ext.get('contentsArea'),{msg:"{{lang.VMSG_MSG_ACCESSING}}"})).show();
-							window.location.href = '{{vurl}}template';
+							window.location.href = '{{vurl}}add_template';
 						}
 					},'-']
 			});
