--- a/src/templates/default/pc/tenant/template_table.html
+++ b/src/templates/default/pc/tenant/template_table.html
@@ -22,12 +22,12 @@
 		<input type="text" name="value[]" class="inputtextcs" placeholder="30,40,50">
 	</th>
 	<th class="tcus">
-		<input type="text" name="default[]" class="inputtextcs">
+		<input type="text" name="default[]" class="inputtextcs" placeholder="例:サテライト">
 	</th>
 </tr>
 <tr class="tcus">
 	<th class="tcus">
-		<input type="text" name="question[]" placeholder="例:あなたの名前は？" class="inputtextcs">
+		<input type="text" name="question[]" placeholder="例:あなたの年齢は？" class="inputtextcs">
 	</th>
 	<th class="tcus">
 		<input type="text" name="location[]" class="inputtextcs" placeholder="例:C7">
@@ -39,7 +39,7 @@
 		</select>
 	</th>
 	<th class="tcus">
-		<input type="text" name="value[]" class="inputtextcs">
+		<input type="text" name="value[]" class="inputtextcs" placeholder="30,40,50">
 	</th>
 	<th class="tcus">
 		<input type="text" name="default[]" class="inputtextcs" placeholder="例:サテライト">
@@ -47,7 +47,7 @@
 </tr>
 <tr class="tcus">
 	<th class="tcus">
-		<input type="text" name="question[]" placeholder="例:あなたの性別は？" class="inputtextcs">
+		<input type="text" name="question[]" placeholder="例:あなたの年齢は？" class="inputtextcs">
 	</th>
 	<th class="tcus">
 		<input type="text" name="location[]" class="inputtextcs" placeholder="例:C7">
@@ -59,11 +59,49 @@
 		</select>
 	</th>
 	<th class="tcus">
-		<input type="text" name="value[]" class="inputtextcs">
+		<input type="text" name="value[]" class="inputtextcs" placeholder="30,40,50">
 	</th>
 	<th class="tcus">
-		<input type="text" name="default[]" class="inputtextcs">
+		<input type="text" name="default[]" class="inputtextcs" placeholder="例:サテライト">
 	</th>
 </tr>
-{% include "./template_table_tr.html" %}
-{% include "./template_table_tr.html" %}
+<tr class="tcus">
+	<th class="tcus">
+		<input type="text" name="question[]" placeholder="例:あなたの年齢は？" class="inputtextcs">
+	</th>
+	<th class="tcus">
+		<input type="text" name="location[]" class="inputtextcs" placeholder="例:C7">
+	</th>
+	<th class="tcus">
+		<select class="csselect" name="require[]">
+			<option value="0">No</option>
+			<option value="1">Yes</option>
+		</select>
+	</th>
+	<th class="tcus">
+		<input type="text" name="value[]" class="inputtextcs" placeholder="30,40,50">
+	</th>
+	<th class="tcus">
+		<input type="text" name="default[]" class="inputtextcs" placeholder="例:サテライト">
+	</th>
+</tr>
+<tr class="tcus">
+	<th class="tcus">
+		<input type="text" name="question[]" placeholder="例:あなたの年齢は？" class="inputtextcs">
+	</th>
+	<th class="tcus">
+		<input type="text" name="location[]" class="inputtextcs" placeholder="例:C7">
+	</th>
+	<th class="tcus">
+		<select class="csselect" name="require[]">
+			<option value="0">No</option>
+			<option value="1">Yes</option>
+		</select>
+	</th>
+	<th class="tcus">
+		<input type="text" name="value[]" class="inputtextcs" placeholder="30,40,50">
+	</th>
+	<th class="tcus">
+		<input type="text" name="default[]" class="inputtextcs" placeholder="例:サテライト">
+	</th>
+</tr>
