--- a/src/templates/default/pc/tenant/template_add.html
+++ b/src/templates/default/pc/tenant/template_add.html
@@ -8,7 +8,7 @@
 	<script type="text/javascript" src="{{vscripturl|safe}}ucfext_task.js?{{version|safe}}"></script>
 	<script type="text/javascript" src="{{vscripturl|safe}}ucfext_operationlog.js?{{version|safe}}"></script>
 	<!-- <title>{{lang.VMSG_SITE_TITLE_OPERATIONLOG|safe}} - {% if sp_code == 'worksmobile': %}{{lang.HTML_TITLE_WORKSMOBILE}}{%else:%}{{lang.HTML_TITLE}}{%endif%}</title> -->
-	<title>Add Template</title>
+	<title>{{lang.ADD_TEMPLATE}}</title>
 	<script type="text/javascript">
 		var each_page_cnt = 20;
 		var store;
@@ -289,7 +289,7 @@
 					<div class="boxRound2"><img src="/images/spacer.gif" alt="" /></div>
 					<!-- rightArea innerArea//start -->
 					<div class="innerArea01" style="min-height: 70vh;">
-						<p class="ttl">Add Template</p>
+						<p class="ttl">{{lang.ADD_TEMPLATE}}</p>
 						<table class="acs_layout">
 							<tr>
 								<td class="layout_td layout_td_all2">
