--- a/src/templates/default/pc/tenant/include/header.html
+++ b/src/templates/default/pc/tenant/include/header.html
@@ -36,7 +36,7 @@
 <ul>
 {% if 'ADMIN' in login.access_authority:%}
     <li class="panelOff {% if ucfp.data.gnaviid == 'DASHBOARD' %}current{% endif %} " ><a href="{{vurl}}">{{lang.VMSG_DASHBOARD}}</a></li>
-    <li class="panelOff {% if ucfp.data.gnaviid == 'TEMPLATE' %}current{% endif %} " ><a href="{{vurl}}template">Template</a></li>
+    <li class="panelOff {% if ucfp.data.gnaviid == 'TEMPLATE' %}current{% endif %} " ><a href="{{vurl}}template">{{lang.TEMPLATE}}</a></li>
 {% elif 'OPERATOR' in login.access_authority: %}
 
 {% endif %}
